Feature: AI heroes can refuse to participate in peasant revenge (defined by parameters in partyLordLetNotableStartRevenge). Player clan members will participate
Changed: Parameter ReparationsScaleToSettlementHearts will be reset to 20, if it was more than 30. (this value will be updated in configuration file during game load) 
         It asures 2 AI executions due peasant revenge per year.
Changed: Increased lordWillDemandRansomMoneyIfHasLessGoldThan to 2000 (will change if configuration file is deleted)
230404 v8
Feature: Player and AI now play by the same rules (almost). Player can be killed if was caught after raid and "peasantRevengeTimeoutInDays" (5 days default) has not passed.  
         Player must be relative or friend or have high relations with party lord, and avoid heroes with some dangerous traits.
         Player can ask other clan or kingdom hero for reparation money (same rules as AI).
Added:   Configuration variable relationLordAndCriminalChangeWhenLordSavedTheCriminal
230405 v9
Fix: Compatibility with Diplomacy mod
230407 v10
Fix: Gold transfer action fix, when player pressed "criminal will pay".
Fix: String {=PRev0021} fix, no "cought".
230417 v11
Feature: v1.1.3 support
Feature: AI can now blame other AI for the village looting crime (AI and player can choose to kill them both)
Feature: AI blame other AI, when player captures the criminal.
Fix:     Various language fixes.
230420 v12
Fix: Null exception when party, where criminal hero was disappeared.
xxxxxx v13
Feature: Revenger parties. 
Feature: Revenger parties can be dissabled or enabled via dialog with notable peasant (see in configuration file: enableRevengerMobileParty).
Added: Changeable time duration before peasant can create party for revenge (peasantRevengeSartTimeInDays).
xxxxxx v14
Feature: Player let other lord to decide criminal's fate.(not implemented)
Feature: Cases with parties without party leader.(not implemented)
         

